fix: replace deprecated URL constructors and document linter fix process
- Replaced 20+ instances of deprecated URL(String) constructor with URI.create().toURL()
- Updated imports: added java.net.URI, removed unused java.net.URL imports
- Fixed in 15 test files: SmokeTests, SimpleGridTest, GridConnectionTest,
  AdvancedFeaturesTests, DataDrivenTests, NegativeTests, EnhancedGridTests,
  MobileTestsConfiguration, GTWebinarServiceTests, SharepointServiceTests,
  SSOService, REST, FSOTests, YMService, ISelenium, SeleniumWebDriver
- Added Rule 11 to AI_WORKFLOW_RULES.md documenting linter fix process
- Progress: 68 warnings remaining (70% reduction from 229)

Files modified: 17
Linter warnings fixed: 9 (deprecated URL + unused imports)
Total progress: 161 warnings fixed since start