@@ -2,7 +2,7 @@ package com.cjs.qa.junit.tests;
 
 import com.cjs.qa.utilities.AllureHelper;
 import io.qameta.allure.*;
-import java.net.URL;
+import java.net.URI;
 import java.time.Duration;
 import java.util.Set;
 import org.apache.logging.log4j.LogManager;
@@ -54,7 +54,7 @@ public class AdvancedFeaturesTests {
     options.addArguments("--disable-dev-shm-usage");
     options.addArguments("--disable-gpu");
 
-    driver = new RemoteWebDriver(new URL(gridUrl), options);
+    driver = new RemoteWebDriver(URI.create(gridUrl).toURL(), options);
     LOGGER.info("✅ Driver initialized in {} mode", isHeadless ? "headless" : "headed");
     driver.manage().timeouts().implicitlyWait(Duration.ofSeconds(10));
     LOGGER.info("✅ Driver initialized");
