@@ -2,7 +2,7 @@ package com.cjs.qa.junit.tests;
 
 import static org.junit.Assert.*;
 
-import java.net.URL;
+import java.net.URI;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.junit.After;
@@ -42,7 +42,7 @@ public class GridConnectionTest {
     options.addArguments("--disable-dev-shm-usage");
     options.addArguments("--disable-gpu");
 
-    driver = new RemoteWebDriver(new URL(gridUrl), options);
+    driver = new RemoteWebDriver(URI.create(gridUrl).toURL(), options);
     log.info("✅ Driver initialized in {} mode", (isHeadless ? "headless" : "headed"));
     log.info("Successfully connected to Grid!");
   }
