@@ -13,6 +13,7 @@ import java.io.FileWriter;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
+import java.net.URI;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -194,7 +195,7 @@ public class FSOTests {
   public static boolean fileDownload(String linkURL, String filePathName) throws QAException {
     final File file = new File(filePathName);
     try {
-      final URL url = new URL(linkURL);
+      final URL url = URI.create(linkURL).toURL();
       // FileUtils.copyURLToFile(url, file)
       FileUtils.copyURLToFile(url, file, URL_TIMEOUT_CONNECTION, URL_TIMEOUT_READ);
     } catch (final Exception e) {
@@ -217,7 +218,7 @@ public class FSOTests {
       attempt++;
       Environment.sysOut(JavaHelpers.getCurrentMethodName() + " attempt " + attempt);
       try {
-        final URL url = new URL(exportURI);
+        final URL url = URI.create(exportURI).toURL();
         final File file = new File(filePathName);
         // FileUtils.copyURLToFile(url, file)
         FileUtils.copyURLToFile(url, file, URL_TIMEOUT_CONNECTION, URL_TIMEOUT_READ);
